<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profil.ProfileFragment"
        android:background="@color/primaryBackgroundYellow">

    <androidx.cardview.widget.CardView
            android:id="@+id/Profil_profilCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:paddingBottom="10dp"
                                                           android:paddingTop="5dp"
                                                           android:paddingStart="10dp">

            <TextView android:id="@+id/Profil_Name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="30dp"
                      android:layout_marginTop="10dp"
                      android:text="@string/name"
                      android:textSize="@dimen/mainSize"
                      android:textStyle="bold"/>

            <EditText android:id="@+id/Profil_EditName"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="@id/Profil_Name"
                      app:layout_constraintEnd_toEndOf="@id/Profil_Name"
                      app:layout_constraintBottom_toBottomOf="@id/Profil_Name"
                      app:layout_constraintStart_toStartOf="@id/Profil_Name"
                      android:text="@string/name"
                      android:textSize="@dimen/mainSize"
                      android:textStyle="bold"
                      android:visibility="invisible"/>

            <TextView android:id="@+id/Profil_Bday"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@id/Profil_Name"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="30dp"
                      android:layout_marginTop="10dp"
                      android:text="@string/birthday"
                      android:textSize="@dimen/mediumSize"
            />

            <TextView android:id="@+id/Profil_Email"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@id/Profil_Bday"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="30dp"
                      android:layout_marginTop="10dp"
                      android:textSize="@dimen/mediumSize"/>

            <EditText android:id="@+id/Profil_EditEmail"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="@id/Profil_Email"
                      app:layout_constraintEnd_toEndOf="@id/Profil_Email"
                      app:layout_constraintBottom_toBottomOf="@id/Profil_Email"
                      app:layout_constraintStart_toStartOf="@id/Profil_Email"
                      android:textSize="@dimen/mediumSize"
                      android:visibility="invisible"
                      android:inputType="textEmailAddress"/>

            <androidx.cardview.widget.CardView
                    android:id="@+id/Avatar_card"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:translationZ="-10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="10dp">

                <ImageView android:id="@+id/Profil_Avatar"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"/>
                <!--  app:srcCompat="@drawable/profil"-->
            </androidx.cardview.widget.CardView>

            <ImageView
                    android:id="@+id/Profil_Avatar_Upload"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintBottom_toBottomOf="@id/Avatar_card"
                    app:layout_constraintEnd_toEndOf="@id/Avatar_card"
                    app:srcCompat="@android:drawable/stat_sys_upload"
                    android:background="#bbb"
                    android:visibility="invisible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       app:layout_constraintTop_toBottomOf="@id/Profil_profilCard"
                                       android:layout_margin="10dp"
                                       app:cardCornerRadius="10dp"
                                       android:id="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:paddingBottom="10dp"
                                                           android:paddingTop="5dp"
                                                           android:paddingStart="10dp">

            <TextView
                    android:id="@+id/Login_Adrr"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="20sp"
                    android:textStyle="bold"
            />


            <TextView
                    android:id="@+id/Profil_city"
                    app:layout_constraintStart_toStartOf="@id/Login_Adrr"
                    app:layout_constraintTop_toBottomOf="@id/Login_Adrr"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="@dimen/mediumSize"
                    android:layout_marginTop="10dp"/>

            <EditText
                    android:id="@+id/Profil_Editcity"
                    app:layout_constraintTop_toTopOf="@id/Profil_city"
                    app:layout_constraintEnd_toEndOf="@id/Profil_city"
                    app:layout_constraintBottom_toBottomOf="@id/Profil_city"
                    app:layout_constraintStart_toStartOf="@id/Profil_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="@dimen/mediumSize"
                    android:visibility="invisible"/>

            <TextView
                    android:id="@+id/Profil_Zip"
                    app:layout_constraintStart_toStartOf="@id/Profil_city"
                    app:layout_constraintTop_toBottomOf="@id/Profil_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zip"
                    android:textSize="@dimen/mediumSize"
                    android:layout_marginTop="10dp"/>

            <EditText
                    android:id="@+id/Profil_EditZip"
                    app:layout_constraintTop_toTopOf="@id/Profil_Zip"
                    app:layout_constraintEnd_toEndOf="@id/Profil_Zip"
                    app:layout_constraintBottom_toBottomOf="@id/Profil_Zip"
                    app:layout_constraintStart_toStartOf="@id/Profil_Zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zip"
                    android:textSize="@dimen/mediumSize"
                    android:visibility="invisible"/>

            <TextView
                    android:id="@+id/Profil_Street"
                    app:layout_constraintStart_toStartOf="@id/Profil_Zip"
                    app:layout_constraintTop_toBottomOf="@id/Profil_Zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:textSize="@dimen/mediumSize"
                    android:layout_marginTop="10dp"/>

            <EditText
                    android:id="@+id/Profil_EditStreet"
                    app:layout_constraintTop_toTopOf="@id/Profil_Street"
                    app:layout_constraintEnd_toEndOf="@id/Profil_Street"
                    app:layout_constraintBottom_toBottomOf="@id/Profil_Street"
                    app:layout_constraintStart_toStartOf="@id/Profil_Street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:textSize="@dimen/mediumSize"
                    android:visibility="invisible"/>


            <TextView
                    android:id="@+id/Profil_number"
                    app:layout_constraintStart_toStartOf="@id/Profil_Street"
                    app:layout_constraintTop_toBottomOf="@id/Profil_Street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="@dimen/mediumSize"
                    android:layout_marginTop="10dp"/>

            <EditText
                    android:id="@+id/Profil_Editnumber"
                    app:layout_constraintTop_toTopOf="@id/Profil_number"
                    app:layout_constraintEnd_toEndOf="@id/Profil_number"
                    app:layout_constraintBottom_toBottomOf="@id/Profil_number"
                    app:layout_constraintStart_toStartOf="@id/Profil_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="@dimen/mediumSize"
                    android:visibility="invisible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="60dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:backgroundTint="@color/primaryLightColor"
            android:id="@+id/floatingActionButton"
            android:src="@drawable/savefileoption" app:borderWidth="0dp"/>

    <!--<ImageView android:layout_width="60dp"
               android:layout_height="60dp"
               app:layout_constraintStart_toStartOf="@+id/floatingActionButton"
               app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
               app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
               app:layout_constraintTop_toTopOf="@+id/floatingActionButton" app:srcCompat="@drawable/save-file-option"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>