<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".ui.main.MainActivity"
        android:background="@android:color/white">

    <com.alamkanak.weekview.WeekView
            android:id="@+id/weekView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:eventTextColor="@android:color/white"
            app:textSize="12sp"
            app:hourHeight="60dp"
            app:headerColumnPadding="8dp"
            app:headerColumnTextColor="@color/primaryColor"
            app:headerRowPadding="12dp"
            app:columnGap="8dp"
            app:noOfVisibleDays="3"
            app:headerRowBackgroundColor="@color/primaryLightColor"
            app:todayHeaderTextColor="@color/primaryBackgroundYellow"
            app:dayBackgroundColor="@android:color/white"
            app:todayBackgroundColor="@color/primaryBackgroundYellow"
            app:headerColumnBackground="#ffffffff"/>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent" android:layout_height="match_parent"
                  android:id="@+id/main_fragment"/>

    <include android:id="@+id/progress_bar_screen"
             layout="@layout/progress_bar_screen"
             android:visibility="gone"
    />

</androidx.constraintlayout.widget.ConstraintLayout>